--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -714,7 +714,7 @@ footer {
 
 
 
-@media (min-width: 770px) {
+@media only screen and (min-width: 800px) {
   #about .about-img {
     background-position: 50% 50% !important;
     background-size: cover !important;
@@ -728,6 +728,8 @@ footer {
     left: 0;
 }
   }
+
+
 
 #experience .experience-img {
     background-position: 50% 50% !important;
